--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "checkin",
   "version": "1.0.0",
   "main": "main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4"
